  *) Allow ErrorDocument directive to also be used from .htaccess files.
     This is enabled/disabled by using the FileInfo flag with 
     AllowOverrides [Mark Cox]
     
  *) Add AddHandler command, which allows content-type-independent 
     "handlers" to be defined for file extensions. These can be either
     built into Apache (such as CGI scripts or server-side includes, or
     added with the Action command). [Alexei Kosut]

  *) Added new Explain() function, intended to help trace execution. Currently
     only used in mod_proxy.c (and there not yet complete). Switch it on with
     -DEXPLAIN. See explain.h. [Ben Laurie]

  *) Added two new directives to proxy module, CacheDirLevels and
     CacheDirLength. Values of 3 and 2 respectively will result in files like
     aa/bb/cc/dddddd in the cache. [Ben Laurie]

  *) Modify <VirtualHost> directive to work without the system supporting
     multiple IP addresses. It can now take advantage of the Host: header
     sent by some (but not all) new web browsers (e.g. Netscape 2.0). Those
     that do not support it will get the default documents. More names or
     name patters can be added using the ScriptAlias directive, e.g.
     "ScriptAlias foo.bar.net *.foo.com foo.com" [Alexei Kosut]

  *) Added Status module with preliminary documentation available
     http://www.apache.org/docs/1.1/mod_status.html [Mark Cox]

  *) Added simple and complex instrumentation to Apache to allow a
     instantaneous status screen to be displayed.  Since the complex
     instrumentation makes the scoreboard file bigger it has been 
     made a compile-time define (add "-DSTATUS_INSTRUMENTATION" to 
     CFLAGS in the Configuration file) [Mark Cox]

  *) Made it so XBITHACK behavior only occurs for files of type text/html, as
     any other file type doesn't really make sense. [Alexei Kosut]

  *) Slightly modified the API to allow handlers by things other than